--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Descrição atual do clima">
+  <meta name="author" content="Luanny Lima">
+  <meta name="keywords" content="clima,temperatura">
   <title>App de Clima</title>
   <link rel="stylesheet" href="style.css">
 </head>
